Restore players container for rendering other cards

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@ h1 { text-align:center; color:#d32f2f; margin-top:10px; }
     📥 Download my card
   </button>
 </div>
+
 <div id="myGrid"></div>
+
+<h2 style="margin-top:30px;">All Players</h2>
+<div id="players"></div>
 
 <h2 style="text-align:center;">All Players</h2>
 <div id="allPlayers"></div>
