--- a/index.html
+++ b/index.html
@@ -9,11 +9,64 @@ body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f0f0f0; 
 h1 { text-align:center; color:#d32f2f; margin-top:10px; }
 #myTitle { text-align:center; margin:10px 0; font-size:1.2em; }
 #myGrid { display:grid; grid-template-columns: repeat(5, 1fr); grid-gap:5px; width:90%; max-width:900px; margin:0 auto; }
-.cell { position:relative; background:#fff; border:1px solid #ccc; height:100px; display:flex; justify-content:center; align-items:center; cursor:pointer; text-align:center; overflow:hidden; }
-.cell img { width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; z-index:1; }
-.cell .label { position:absolute; z-index:2; color:black; font-weight:bold; text-shadow:none; }
-.cell.filled .label { color:white; text-shadow:1px 1px 3px black; }
-.upload-hint { font-size:0.7em; color:black; display:block; }
+.cell {
+  position: relative;
+  aspect-ratio: 1 / 1;
+  border: 1px solid #ccc;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #f9f9f9;
+}
+
+.cell img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.label {
+  position: absolute;
+  padding: 6px 8px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.2;
+  pointer-events: none;
+}
+
+/* EMPTY CELL LABEL */
+.cell.empty .label {
+  color: #000;
+  background: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* FILLED CELL LABEL */
+.cell.filled .label {
+  bottom: 0;
+  left: 0;
+  right: 0;
+  color: #fff;
+  background: linear-gradient(
+    to top,
+    rgba(0,0,0,0.7),
+    rgba(0,0,0,0)
+  );
+  text-shadow: 0 1px 3px rgba(0,0,0,0.8);
+  transform: none;
+}
+
+/* upload hint */
+.upload {
+  display: block;
+  font-size: 11px;
+  opacity: 0.6;
+  margin-top: 4px;
+}
+
 #allPlayers { margin:20px auto; width:90%; max-width:900px; }
 .player-card { border:1px solid #999; background:#fff; margin-bottom:10px; padding:5px; }
 .player-card h3 { margin:0 0 5px 0; font-size:1em; }
