--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Festive Bingo</title>
+
 <style>
 body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f0f0f0; }
 h1 { text-align:center; color:#d32f2f; margin-top:10px; }
 #myTitle { text-align:center; margin:10px 0; font-size:1.2em; }
 #myGrid { display:grid; grid-template-columns: repeat(5, 1fr); grid-gap:5px; width:90%; max-width:900px; margin:0 auto; }
+
 .cell {
   position: relative;
   aspect-ratio: 1 / 1;
@@ -28,41 +30,56 @@ h1 { text-align:center; color:#d32f2f; margin-top:10px; }
 
 .label {
   position: absolute;
-  padding: 6px 8px;
-  text-align: center;
-  font-size: 12px;
-  line-height: 1.2;
-  pointer-events: none;
-}
-
-/* EMPTY CELL LABEL */
-.cell.empty .label {
-  color: #000;
-  background: none;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-/* FILLED CELL LABEL */
-.cell.filled .label {
-  bottom: 0;
   left: 0;
   right: 0;
+  bottom: 0;
+
+  padding: 4px 6px;
+  text-align: center;
+
+  /* FORCE consistent sizing across devices */
+  font-size: 11px;
+  line-height: 1.15;
+  font-weight: 500;
+
   color: #fff;
+  pointer-events: none;
+
+  /* Safari hard stop */
+  -webkit-text-size-adjust: none !important;
+  text-size-adjust: none !important;
+
+  /* Prevent growth */
+  max-height: 26%;
+  overflow: hidden;
+
+  /* Overlay look */
   background: linear-gradient(
     to top,
-    rgba(0,0,0,0.7),
+    rgba(0,0,0,0.75),
     rgba(0,0,0,0)
   );
-  text-shadow: 0 1px 3px rgba(0,0,0,0.8);
-  transform: none;
+
+  text-shadow: 0 1px 2px rgba(0,0,0,0.9);
 }
 
-/* upload hint */
+/* EMPTY CELL (override for centered text) */
+.cell.empty .label {
+  top: 50%;
+  bottom: auto;
+  left: 50%;
+  right: auto;
+
+  transform: translate(-50%, -50%);
+  background: none;
+  color: #000;
+  max-height: none;
+  text-shadow: none;
+}
+
 .upload {
   display: block;
-  font-size: 11px;
+  font-size: 10px;
   opacity: 0.6;
   margin-top: 4px;
 }
