Fix duplicate confetti script and clean index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ h1 { text-align:center; color:#d32f2f; margin-top:10px; }
 <h2 style="margin-top:30px;">All Players</h2>
 <div id="players"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<!-- BINGO OVERLAY -->
 <div id="bingoOverlay" style="
   display:none;
   position:fixed;
@@ -126,9 +126,13 @@ h1 { text-align:center; color:#d32f2f; margin-top:10px; }
   🎉 BINGO!! 🎉
 </div>
 
+<!-- Libraries -->
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
+<!-- App (ONCE) -->
 <script type="module" src="app.js"></script>
+
 
 
 </body>
